Revert "Lesson 4 - Exercise Submission"
This reverts commit 24dbed34c2525a9c04d3ca22e895a147ee93d9b0.

--- a/04-Data Files and Cleaning/working-with-files.ipynb
+++ b/04-Data Files and Cleaning/working-with-files.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'w')\n",
@@ -94,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')"
@@ -110,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')\n",
@@ -128,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "type(a)"
@@ -144,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')\n",
@@ -162,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')\n",
@@ -180,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')\n",
@@ -198,7 +212,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "with open('tempfile.txt', 'r') as f:\n",
@@ -236,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -254,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "json.dumps([1,2,3,{'foo': 'bar'}])"
@@ -270,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')\n",
@@ -289,7 +311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "f = open('tempfile.txt', 'r')\n",
@@ -307,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "j = open('temp.json', 'r')\n",
@@ -329,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "my_data = []\n",
@@ -348,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -368,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "with open('my_data.csv', newline='') as f:\n",
@@ -387,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "with open('my_data.csv', newline='') as f:\n",
@@ -406,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "with open('my_data.csv', newline='') as f:\n",
@@ -426,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "for row in my_data:\n",
@@ -445,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "with open('rain.csv', 'r') as csvfile:\n",
@@ -508,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "with open('rents_raw.csv', 'r') as csvfile:\n",
@@ -520,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# the column headers are the first row in the data file\n",
@@ -534,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# what is the 1st column (zero-indexed) in our data set?\n",
@@ -544,7 +590,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# for each row in the data set, print the price column's value\n",
@@ -557,7 +605,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# create a new list to contain the column of prices in the data set\n",
@@ -579,7 +629,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# to remove the first element of the list, we can just capture position 1 through the end of the list\n",
@@ -590,7 +642,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# now let's convert the price strings to integers\n",
@@ -601,7 +655,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# you can't convert an empty string to a numeric type\n",
@@ -631,7 +687,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# use our function to convert each element in the list of prices to an integer\n",
@@ -642,7 +700,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# rather than just printing each converted value, turn it into a new list called int_prices\n",
@@ -662,7 +722,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# replace any forward slashes in neighborhood name with a hyphen\n",
@@ -713,7 +775,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# clean the data set by calling the cleaning functions and save the results to variables\n",
@@ -744,202 +808,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['neighborhood', 'price', 'bedrooms', 'date', 'sqft', 'longitude', 'latitude']\n",
-      "['foster city', '2495', '1', '11/14/2014 12:26', '755', '-122.27', '37.5538']\n",
-      "['palo alto', '2695', '', '11/14/2014 12:25', '443', '-122.161524', '37.450289']\n",
-      "['brisbane', '3150', '2', '11/14/2014 12:24', '1242', '-122.417912', '37.692415']\n",
-      "['palo alto', '2800', '2', '11/14/2014 12:24', '', '', '']\n",
-      "['san mateo', '2196', '1', '11/14/2014 12:24', '676', '-122.2998', '37.5395']\n",
-      "['santa clara', '3264', '3', '11/14/2014 12:28', '1138', '', '']\n",
-      "['san jose south', '2000', '2', '11/14/2014 12:28', '822', '-121.902268', '37.253503']\n",
-      "['sunnyvale', '4740', '3', '11/14/2014 12:28', '1406', '-122.034683', '37.368445']\n",
-      "['inner sunset / UCSF', '3395', '2', '11/14/2014 12:32', '', '-122.479345', '37.764582']\n",
-      "['richmond / seacliff', '2699', '1', '11/14/2014 12:32', '', '-122.503781', '37.7718']\n",
-      "['SOMA / south beach', '3620', '1', '11/14/2014 12:30', '860', '-122.395195', '37.775133']\n",
-      "['dublin / pleasanton / livermore', '2025', '1', '11/14/2014 12:18', '636', '-121.787665', '37.67963']\n",
-      "['concord / pleasant hill / martinez', '', '2', '11/14/2014 12:18', '1019', '-122.035275', '37.975259']\n",
-      "['hercules, pinole, san pablo, el sob', '1795', '1', '11/14/2014 12:17', '715', '-122.321672', '37.978086']\n",
-      "['corte madera', '4299', '3', '11/14/2014 12:33', '1533', '-122.488541', '37.919834']\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('data/rents_raw.csv', 'r') as csvfile:\n",
-    "    rent_data = csv.reader(csvfile)\n",
-    "    for row in rent_data:\n",
-    "        print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "prices = []\n",
-    "feet = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data/rents_raw.csv','r') as csvfile:\n",
-    "    \n",
-    "    extraction = csv.reader(csvfile)\n",
-    "    \n",
-    "    for row in extraction:\n",
-    "        prices.append(row[1])        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open('data/rents_raw.csv','r') as csvfile:\n",
-    "    \n",
-    "    extraction2 = csv.reader(csvfile)\n",
-    "    \n",
-    "    for row2 in extraction2:\n",
-    "        feet.append(row2[4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['price', '2495', '2695', '3150', '2800', '2196', '3264', '2000', '4740', '3395', '2699', '3620', '2025', '', '1795', '4299']\n",
-      "['sqft', '755', '443', '1242', '', '676', '1138', '822', '1406', '', '', '860', '636', '1019', '715', '1533']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prices)\n",
-    "print(feet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2495', '2695', '3150', '2800', '2196', '3264', '2000', '4740', '3395', '2699', '3620', '2025', '', '1795', '4299']\n",
-      "['755', '443', '1242', '', '676', '1138', '822', '1406', '', '', '860', '636', '1019', '715', '1533']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Remove headers and print\n",
-    "prices_noheader = prices[1:]\n",
-    "feet_noheader = feet[1:]\n",
-    "\n",
-    "print(prices_noheader)\n",
-    "print(feet_noheader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#write function that will convert blank strings to either an integer or None depending on content\n",
-    "def extract_int(price):\n",
-    "    if not price == '':\n",
-    "        return int(float(price))\n",
-    "    else:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Convert prices to integers\n",
-    "int_prices = []\n",
-    "for price in prices_noheader:\n",
-    "    int_prices.append(extract_int(price))\n",
-    "\n",
-    "#Convert sqft to integers\n",
-    "int_feet = []\n",
-    "for feet in feet_noheader:\n",
-    "    int_feet.append(extract_int(feet))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11245"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#filter the prices and the sqft to remove the instances of None\n",
-    "int_prices_filter = filter(None, int_prices)\n",
-    "int_feet_filter = filter(None, int_feet)\n",
-    "\n",
-    "sum(int_feet_filter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2495, 2695, 3150, 2800, 2196, 3264, 2000, 4740, 3395, 2699, 3620, 2025, None, 1795, 4299]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ppsf = []\n",
-    "i = 0\n",
-    "if(int_prices[i]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -953,9 +833,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
