--- a/07-Data Wrangling/open-flights.ipynb
+++ b/07-Data Wrangling/open-flights.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -29,8 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# These files use \\N as a missing value indicator.  When reading the CSVs, we will tell\n",
@@ -61,8 +63,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -235,7 +239,7 @@
        "4  Pacific/Port_Moresby  airport  OurAirports  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +376,7 @@
        "4  United Kingdom      N  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +520,7 @@
        "4       CR2  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +657,7 @@
        "5763   CR7 CRJ  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +872,7 @@
        "5591  United States      Y  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -904,7 +908,7 @@
        "Name: source, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +929,7 @@
        "array(['United States', 'France', 'Netherlands'], dtype=object)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1976,7 @@
        "59608    U S AIR  United States      Y             N  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1997,7 +2001,7 @@
        "Name: International, dtype: float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
