--- a/04-Data Files and Cleaning/working-with-files.ipynb
+++ b/04-Data Files and Cleaning/working-with-files.ipynb
@@ -808,8 +808,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
+   "execution_count": 175,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -835,6 +837,7 @@
     }
    ],
    "source": [
+    "import csv\n",
     "with open('data/rents_raw.csv', 'r') as csvfile:\n",
     "    rent_data = csv.reader(csvfile)\n",
     "    for row in rent_data:\n",
@@ -843,10 +846,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 176,
+   "metadata": {},
    "outputs": [],
    "source": [
     "prices = []\n",
@@ -855,28 +856,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 177,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#fill prices with information from dataset\n",
     "with open('data/rents_raw.csv','r') as csvfile:\n",
     "    \n",
     "    extraction = csv.reader(csvfile)\n",
     "    \n",
     "    for row in extraction:\n",
-    "        prices.append(row[1])        "
+    "        prices.append(row[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#delete rows with blank cell\n",
+    "del prices[13]\n",
+    "del prices[10]\n",
+    "del prices[9]\n",
+    "del prices[4]\n",
+    "del prices[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#fill feet with information from dataset\n",
     "with open('data/rents_raw.csv','r') as csvfile:\n",
     "    \n",
     "    extraction2 = csv.reader(csvfile)\n",
@@ -887,15 +904,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 180,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#delete rows with blank cell\n",
+    "del feet[13]\n",
+    "del feet[10]\n",
+    "del feet[9]\n",
+    "del feet[4]\n",
+    "del feet[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['price', '2495', '2695', '3150', '2800', '2196', '3264', '2000', '4740', '3395', '2699', '3620', '2025', '', '1795', '4299']\n",
-      "['sqft', '755', '443', '1242', '', '676', '1138', '822', '1406', '', '', '860', '636', '1019', '715', '1533']\n"
+      "['2495', '2695', '3150', '2196', '3264', '2000', '4740', '3620', '2025', '1795', '4299']\n",
+      "['755', '443', '1242', '676', '1138', '822', '1406', '860', '636', '715', '1533']\n"
      ]
     }
    ],
@@ -906,30 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2495', '2695', '3150', '2800', '2196', '3264', '2000', '4740', '3395', '2699', '3620', '2025', '', '1795', '4299']\n",
-      "['755', '443', '1242', '', '676', '1138', '822', '1406', '', '', '860', '636', '1019', '715', '1533']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Remove headers and print\n",
-    "prices_noheader = prices[1:]\n",
-    "feet_noheader = feet[1:]\n",
-    "\n",
-    "print(prices_noheader)\n",
-    "print(feet_noheader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 182,
    "metadata": {
     "collapsed": true
    },
@@ -945,64 +955,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Convert prices to integers\n",
-    "int_prices = []\n",
-    "for price in prices_noheader:\n",
-    "    int_prices.append(extract_int(price))\n",
-    "\n",
-    "#Convert sqft to integers\n",
-    "int_feet = []\n",
-    "for feet in feet_noheader:\n",
-    "    int_feet.append(extract_int(feet))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11245"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#filter the prices and the sqft to remove the instances of None\n",
-    "int_prices_filter = filter(None, int_prices)\n",
-    "int_feet_filter = filter(None, int_feet)\n",
-    "\n",
-    "sum(int_feet_filter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2495, 2695, 3150, 2800, 2196, 3264, 2000, 4740, 3395, 2699, 3620, 2025, None, 1795, 4299]\n"
+      "[2495, 2695, 3150, 2196, 3264, 2000, 4740, 3620, 2025, 1795, 4299]\n",
+      "[755, 443, 1242, 676, 1138, 822, 1406, 860, 636, 715, 1533]\n"
      ]
     }
    ],
    "source": [
-    "ppsf = []\n",
-    "i = 0\n",
-    "if(int_prices[i]"
+    "#Convert prices to integers\n",
+    "int_prices = []\n",
+    "for price in prices:\n",
+    "    int_prices.append(extract_int(price))\n",
+    "\n",
+    "#Convert sqft to integers\n",
+    "int_feet = []\n",
+    "for feet in feet:\n",
+    "    int_feet.append(extract_int(feet))\n",
+    "    \n",
+    "print(int_prices)\n",
+    "print(int_feet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#create list of ppsf\n",
+    "list = [x/y for x,y in zip(int_prices,int_feet)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"file.csv\",'w') as myfile:\n",
+    "    wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
+    "    wr.writerow(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3230468198395666"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find average of the list for average ppsf\n",
+    "avg = sum(list)/float(len(list))\n",
+    "avg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I dealt with the missing data by deleting the rows that had a blank price or a blank sqft manually.  Obviously, we would ideally do this using a loop, but since we had a small dataset, I took the liberty of manually deleting the rows."
    ]
   }
  ],
