--- a/10-Spatial Analysis/citibike.ipynb
+++ b/10-Spatial Analysis/citibike.ipynb
@@ -12,17 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests  \n",
     "import json\n",
     "from pyproj import Proj\n",
     "from shapely.geometry import Point\n",
-    "import geopandas as gp"
+    "import geopandas as gp\n",
+    "from geopandas import GeoDataFrame"
    ]
   },
   {
@@ -34,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "boros = gp.GeoDataFrame.from_file('nybb_15b/nybb.shp')"
@@ -52,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get the bike data and convert it to a ditcionary\n",
@@ -66,24 +61,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>altitude</th>\n",
+       "      <th>availableBikes</th>\n",
+       "      <th>availableDocks</th>\n",
+       "      <th>city</th>\n",
+       "      <th>id</th>\n",
+       "      <th>landMark</th>\n",
+       "      <th>lastCommunicationTime</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>location</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>stAddress1</th>\n",
+       "      <th>stAddress2</th>\n",
+       "      <th>stationName</th>\n",
+       "      <th>statusKey</th>\n",
+       "      <th>statusValue</th>\n",
+       "      <th>testStation</th>\n",
+       "      <th>totalDocks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>33</td>\n",
+       "      <td></td>\n",
+       "      <td>72</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-02-15 01:32:33 PM</td>\n",
+       "      <td>40.767272</td>\n",
+       "      <td></td>\n",
+       "      <td>-73.993929</td>\n",
+       "      <td></td>\n",
+       "      <td>W 52 St &amp; 11 Ave</td>\n",
+       "      <td></td>\n",
+       "      <td>W 52 St &amp; 11 Ave</td>\n",
+       "      <td>1</td>\n",
+       "      <td>In Service</td>\n",
+       "      <td>False</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td></td>\n",
+       "      <td>79</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-02-15 01:31:21 PM</td>\n",
+       "      <td>40.719116</td>\n",
+       "      <td></td>\n",
+       "      <td>-74.006667</td>\n",
+       "      <td></td>\n",
+       "      <td>Franklin St &amp; W Broadway</td>\n",
+       "      <td></td>\n",
+       "      <td>Franklin St &amp; W Broadway</td>\n",
+       "      <td>1</td>\n",
+       "      <td>In Service</td>\n",
+       "      <td>False</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td>82</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-02-15 01:31:04 PM</td>\n",
+       "      <td>40.711174</td>\n",
+       "      <td></td>\n",
+       "      <td>-74.000165</td>\n",
+       "      <td></td>\n",
+       "      <td>St James Pl &amp; Pearl St</td>\n",
+       "      <td></td>\n",
+       "      <td>St James Pl &amp; Pearl St</td>\n",
+       "      <td>1</td>\n",
+       "      <td>In Service</td>\n",
+       "      <td>False</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td></td>\n",
+       "      <td>11</td>\n",
+       "      <td>49</td>\n",
+       "      <td></td>\n",
+       "      <td>83</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-02-15 01:30:20 PM</td>\n",
+       "      <td>40.683826</td>\n",
+       "      <td></td>\n",
+       "      <td>-73.976323</td>\n",
+       "      <td></td>\n",
+       "      <td>Atlantic Ave &amp; Fort Greene Pl</td>\n",
+       "      <td></td>\n",
+       "      <td>Atlantic Ave &amp; Fort Greene Pl</td>\n",
+       "      <td>1</td>\n",
+       "      <td>In Service</td>\n",
+       "      <td>False</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td>119</td>\n",
+       "      <td></td>\n",
+       "      <td>2018-02-15 01:30:27 PM</td>\n",
+       "      <td>40.696089</td>\n",
+       "      <td></td>\n",
+       "      <td>-73.978034</td>\n",
+       "      <td></td>\n",
+       "      <td>Park Ave &amp; St Edwards St</td>\n",
+       "      <td></td>\n",
+       "      <td>Park Ave &amp; St Edwards St</td>\n",
+       "      <td>1</td>\n",
+       "      <td>In Service</td>\n",
+       "      <td>False</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  altitude  availableBikes  availableDocks city   id landMark  \\\n",
+       "0                        5              33        72            \n",
+       "1                       11              20        79            \n",
+       "2                       17              10        82            \n",
+       "3                       11              49        83            \n",
+       "4                        9              10       119            \n",
+       "\n",
+       "    lastCommunicationTime   latitude location  longitude postalCode  \\\n",
+       "0  2018-02-15 01:32:33 PM  40.767272          -73.993929              \n",
+       "1  2018-02-15 01:31:21 PM  40.719116          -74.006667              \n",
+       "2  2018-02-15 01:31:04 PM  40.711174          -74.000165              \n",
+       "3  2018-02-15 01:30:20 PM  40.683826          -73.976323              \n",
+       "4  2018-02-15 01:30:27 PM  40.696089          -73.978034              \n",
+       "\n",
+       "                      stAddress1 stAddress2                    stationName  \\\n",
+       "0               W 52 St & 11 Ave                          W 52 St & 11 Ave   \n",
+       "1       Franklin St & W Broadway                  Franklin St & W Broadway   \n",
+       "2         St James Pl & Pearl St                    St James Pl & Pearl St   \n",
+       "3  Atlantic Ave & Fort Greene Pl             Atlantic Ave & Fort Greene Pl   \n",
+       "4       Park Ave & St Edwards St                  Park Ave & St Edwards St   \n",
+       "\n",
+       "   statusKey statusValue  testStation  totalDocks  \n",
+       "0          1  In Service        False          39  \n",
+       "1          1  In Service        False          33  \n",
+       "2          1  In Service        False          27  \n",
+       "3          1  In Service        False          62  \n",
+       "4          1  In Service        False          19  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# convert the relevant part to a geodataframe\n",
-    "df = gp.GeoDataFrame(data['stationBeanList'])\n",
+    "df = GeoDataFrame(data['stationBeanList'])\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "813"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# there is one row for each bike station.  How many stations are there? \n",
     "len(df)"
@@ -91,16 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-74.0969366 ,  40.65539977, -73.9077436 ,  40.81439444])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# in the file above, there are lon-lats, but no geometry field\n",
     "# we need to set that up\n",
     "\n",
-    "s = GeoSeries([Point(x, y) for x, y in zip(df['longitude'], df['latitude'])])\n",
+    "s = gp.GeoSeries([Point(x, y) for x, y in zip(df['longitude'], df['latitude'])])\n",
     "df['geometry'] = s\n",
     "df.crs = {'init': 'epsg:4326', 'no_defs': True}\n",
     "df.geometry.total_bounds"
@@ -108,11 +305,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  957370.14732176,   178056.37414829,  1009803.53178432,\n",
+       "         235986.42166716])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# make sure they are on the same CRS.  \n",
     "# checking the bounds is a nice way of seeing this\n",
@@ -122,11 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "414 stations in Manhattan\n"
+     ]
+    }
+   ],
    "source": [
     "# the geometry objects can do lots of cool stuff.  For example: \n",
     "\n",
@@ -165,7 +380,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -179,9 +394,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
